# openhms800

./: README.md  openhms-800.service  pyproject.toml  setup_app.sh  setup_systemd.sh
src/openhms800/: config.py  health.py  inverter.py  main.py  models.py  mqtt.py  state.py  web.py
src/openhms800/templates/: base.html  dashboard.html  health.html  info.html  logs.html  settings.html
